--- a/custom-addons/sh_sale_order_history_editing/views/sale_order_historyy.xml
+++ b/custom-addons/sh_sale_order_history_editing/views/sale_order_historyy.xml
@@ -11,7 +11,7 @@
             <field name="aljard"/>
 
         </xpath>
-        <!--  <xpath expr="/form/sheet/notebook/page/field[@name='order_line']/tree/field[@name='name']" position="after">
+          <xpath expr="/form/sheet/notebook/page/field[@name='order_line']/tree/field[@name='name']" position="after">
             <field name="alsarf"/>
         </xpath>
         <xpath expr="/form/sheet/notebook/page/field[@name='order_line']/tree/field[@name='name']" position="after">
@@ -19,7 +19,7 @@
         </xpath>
         <xpath expr="//group[@name='sale_total']" position="inside">
                 <field name="total_multiplied_field"/>
-            </xpath>-->
+            </xpath>
          <!--To hide kanban view from phone and make just tree view-->
          <xpath expr="/form/sheet/notebook/page/field[@name='order_line']"  position="attributes">
           <attribute name="mode">tree</attribute>
@@ -29,7 +29,7 @@
 </record>
 
  <!--show field total_multiplied_field_sale_order in account move form -->
-<!--
+
     <record id="view_account_move_line_form_inherit" model="ir.ui.view">
     <field name="name">account.move.line.form.inherit</field>
     <field name="model">account.move</field>
@@ -39,8 +39,8 @@
         <xpath expr="//group[@col='12' and @class='oe_invoice_lines_tab']/group[@colspan='4']" position="inside">
             <group class="oe_subtotal_footer oe_right">
                   attrs="{'invisible': ['|', ('move_type', 'not in', ('out_invoice', 'out_refund', 'in_invoice', 'in_refund', 'out_receipt', 'in_receipt')),
-                                              ('payment_state' ,'=', 'invoicing_legacy')]}"-->
-<!--
+                                              ('payment_state' ,'=', 'invoicing_legacy')]}"
+
             <field name="sale_order_id" widget="many2one" options="{'no_create_edit': True}" domain="[('state','=','sale')]" context="{'default_state': 'sale'}" invisible="1"/>
             <field name="total_multiplied_field_sale_order"/>
             </group>
@@ -55,7 +55,7 @@
 
     </field>
 </record>
-        -->
+
 
 
 
