--- a/addons/customer_route_management_editing/views/delivery_route.xml
+++ b/addons/customer_route_management_editing/views/delivery_route.xml
@@ -17,8 +17,8 @@
 
                             <field name="sequence" widget="handle" create="True"/>
                             <field name="route"/>
-                            <button name="button_action"
-                                    string="منجز "
+                            <button name="move_record_to_last"
+                                    string="منجز"
                                     class="btn-primary"
                                     style="background-color: red; border-radius: 50%; padding: 10px;"
                                     type="object"
