--- a/addons/customer_route_management_editing/views/delivery_route.xml
+++ b/addons/customer_route_management_editing/views/delivery_route.xml
@@ -15,10 +15,11 @@
                     <field name="route_line_ids"  >
                         <tree  delete="false" create="false" string="Route Liness test" limit="1" >
 
-                            <field name="sequence" widget="handle" create="True"/>
+                            <field name="sequence" string="" invisible="1"/>
+                           <field name="statuss_checkbox" string="" invisible="1"/>
                             <field name="route"/>
                             <button name="move_record_to_last"
-                                    string="منجز"
+                                    string="منجز "
                                     class="btn-primary"
                                     style="background-color: red; border-radius: 50%; padding: 10px;"
                                     type="object"
