--- a/custom-addons/sh_sale_order_history_editing/views/sale_order_historyy.xml
+++ b/custom-addons/sh_sale_order_history_editing/views/sale_order_historyy.xml
@@ -36,7 +36,7 @@
     <field name="inherit_id" ref="account.view_move_form"/>
     <field name="arch" type="xml">
 
-        <xpath expr="//group[@col='12' and @class='oe_invoice_lines_tab']/group[@colspan='4']" position="inside">
+        <xpath expr="//group[@col='12' and hasclass('oe_invoice_lines_tab')]/group[@colspan='4']" position="inside">
            <group class="oe_subtotal_footer oe_right" >
        <!--attrs="{'invisible': [('move_type', 'not in', ('out_invoice', 'out_refund', 'in_invoice', 'in_refund', 'out_receipt', 'in_receipt'))]}"-->
 
@@ -89,7 +89,7 @@
         <field name="arch" type="xml">
 
             <tree sample="1"
-                decoration-info="invoice_status == 'to invoice'"
+                decoration-info="status == 'to invoice'"
                 decoration-muted="status == 'cancel'" >
                             <field name="partner_id" string="العميل" optional="show" />
                             <field name="order_id" string="رقم الفاتورة" optional="show" />
@@ -100,10 +100,10 @@
                             <field name="product_uom" string="الوحدة" optional="show" />
                             <field name="product_uom_qtyy" string="الجرد" optional="show" decoration-warning="product_uom_qtyy &gt;=0"/>
                            <field name="alsarf" string="الصرف" optional="show" decoration-danger="alsarf &lt;0" />
-                           <field name="invoice_status"
-                            decoration-success="invoice_status == 'invoiced'"
-                            decoration-info="invoice_status == 'to invoice'"
-                            decoration-warning="invoice_status == 'upselling'"
+                           <field name="status"
+                            decoration-success="status == 'invoiced'"
+                            decoration-info="status == 'to invoice'"
+                            decoration-warning="status == 'upselling'"
                             widget="badge" optional="show"/>
                             <field name="status" optional="show"/>
                         </tree>
