--- a/custom-addons/ksa_zatca_integration/reports/e_invoicing_b2b.xml
+++ b/custom-addons/ksa_zatca_integration/reports/e_invoicing_b2b.xml
@@ -41,10 +41,10 @@
                         .total_table {white-space: nowrap;}
                         .right_column {text-align:right;}
                         .second_table {
-                            padding: 2px;
+                            padding: 0;
                             border: 1px solid black;
                             border-collapse: collapse;
-                            font-size: 13px;
+                            font-size: 10px;
                         }
                     </style>
 
@@ -84,10 +84,9 @@
                     <h2 style="text-align:center;">
                         <t t-esc="invoice_type"/>
                     </h2>
-                    <div class="page">
-                     <div dir="ltr">
-
-                        <div class="page row">
+                    <div dir="ltr">
+                        <div class="page">
+                          <div class="page row">
 
                              <div class="col-8">
                                 <table style="margin-top:5px;" class="main_table second_table" width="100%">
@@ -249,8 +248,8 @@
                                      alt="Barcode" t-att-src="doc.get_qrcode()"/>
                             </div>
 
-                        </div>
-                        <table style="margin-top:5px;" width="100%">
+                         </div>
+                         <table style="margin-top:5px;" width="100%">
                             <col style="width:11%"/>
                             <col style="width:18%"/>
                             <col style="width:21%"/>
@@ -678,9 +677,9 @@
                                     </td>
                                 </t>
                             </tr>
-                        </table>
+                         </table>
 
-                        <t t-if="doc.invoice_line_ids">
+                         <t t-if="doc.invoice_line_ids">
                             <table style="margin-top:5px;" name="line_items" width="100%" class="second_table">
                                 <thead>
                                     <tr>
@@ -835,10 +834,10 @@
                                             <td class="second_table left_column">
                                                 <span class="lable_bold">Total (Excluding VAT)</span>
                                             </td>
-                                            <td class="second_table" style="text-align:right;">
+                                            <td class="second_table" style="text-align:left;">
                                                 <span class="lable_bold">(الإجمالي (غيرشاملة ضريبة القيمة المضافة</span>
                                             </td>
-                                            <td class="second_table" style="text-align:right;">
+                                            <td class="second_table" style="text-align:left;">
                                                 <span t-esc="doc.amount_untaxed"
                                                       t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
                                             </td>
@@ -847,12 +846,12 @@
                                             <td class="second_table left_column">
                                                 <span class="lable_bold">Total VAT</span>
                                             </td>
-                                            <td class="second_table" style="text-align:right;">
+                                            <td class="second_table" style="text-align:left;">
                                                 <span class="lable_bold">
                                                     إجمالي ﻤﺒﻠﻎ ضريبة القيمة المضافة
                                                 </span>
                                             </td>
-                                            <td class="second_table" style="text-align:right;">
+                                            <td class="second_table" style="text-align:left;">
                                                 <span t-esc="doc.amount_tax"
                                                       t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
                                             </td>
@@ -861,12 +860,12 @@
                                             <td class="second_table left_column">
                                                 <span class="lable_bold">Total VAT (SAR)</span>
                                             </td>
-                                            <td class="second_table" style="text-align:right;">
+                                            <td class="second_table" style="text-align:left;">
                                                 <span class="lable_bold">
                                                     إجمالي ﻤﺒﻠﻎ ضريبة القيمة المضافة
                                                 </span>
                                             </td>
-                                            <td class="second_table" style="text-align:right;">
+                                            <td class="second_table" style="text-align:left;">
                                                 <span t-esc="abs(doc.amount_tax_signed)"
                                                       t-options='{"widget": "monetary", "display_currency": doc.company_id.parent_root_id.currency_id}'/>
                                             </td>
@@ -875,12 +874,12 @@
                                             <td class="second_table left_column">
                                                 <span class="lable_bold">Total Amount</span>
                                             </td>
-                                            <td class="second_table" style="text-align:right;">
+                                            <td class="second_table" style="text-align:left;">
                                                 <span class="lable_bold">
                                                     (إﺟﻤﺎﻟﻲ ﻘﻴﻤﺔ اﻟﻔﺎﺗﻮرة (ﺷﺎﻣﻞ ﺿﺮﻳﺒﺔ اﻟﻘﻴﻤﺔ اﻟﻤﻀﺎﻓﺔ
                                                 </span>
                                             </td>
-                                            <td class="second_table" style="text-align:right;">
+                                            <td class="second_table" style="text-align:left;">
                                                 <span t-esc="doc.amount_total"
                                                       t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
                                             </td>
@@ -889,10 +888,10 @@
                                             <td class="second_table left_column">
                                                 <span class="lable_bold">Amount Due</span>
                                             </td>
-                                            <td class="second_table" style="text-align:right;">
+                                            <td class="second_table" style="text-align:left;">
                                                 <span class="lable_bold">المبلغ المتبقي</span>
                                             </td>
-                                            <td class="second_table" style="text-align:right;">
+                                            <td class="second_table" style="text-align:left;">
                                                 <span t-esc="doc.amount_residual"
                                                       t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
                                             </td>
@@ -906,9 +905,8 @@
                                     </td>
                                 </tr>
                             </table>
-                        </t>
-
-                    </div>
+                         </t>
+                        </div>
                     </div>
                 </t>
             </t>
